# cryptoverse-login

./: .env  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  docker-build  docker-compose.build.yml  local-demo.crt  local-demo.key  local.crt  local.key  setup.sh  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.gitbackup/: FETCH_HEAD  config  index
.gitbackup/hooks/: pre-commit
.gitbackup/logs/: HEAD
.gitbackup/refs/heads/: master
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  ossar-analysis.yml  release.yml
charts/login/: .gitignore  Chart.yaml  encrypt.sh  values.ci.yaml  values.local.yaml  values.prod.yaml.gpg  values.yaml
charts/login/dashboards/: login.json
charts/login/templates/: NOTES.txt  _helpers.tpl  gateway-deployment.yaml  gateway-service.yaml  (+12 more)
login/gateway/: Dockerfile  haproxy.conf
login/login/: .dockerignore  Dockerfile
login/register/: Dockerfile
login/restrictions/: Cargo.toml  Dockerfile  build.rs  go.mod  go.sum
login/restrictions/proto/: restrictions.proto
login/restrictions/route_guide/client/: client.go
login/restrictions/route_guide/routeguide/: route_guide.pb.go  route_guide.proto  route_guide_grpc.pb.go
login/restrictions/route_guide/server/: server.go
login/restrictions/src/: server.rs
login/wrapper/: Dockerfile  wrapper.py
tests/: .gitignore  README.md  browser.py  mobile.py  requirements.txt  test_full.py
tests/cryptoverse-login-demo/: .env  README.md  docker-build  docker-compose.build.yml
tests/metamask/: __init__.py  pages.py
(+105 files in other folders)
