[package]
name = "restrictions"
version = "0.1.0"
authors = ["Grzegorz Kapkowski <grzegorz.kapkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
tokio = { version= "1.5.0", features=["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.4.2"
